fixed contrast error on contact form page

--- a/style.css
+++ b/style.css
@@ -803,11 +803,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #CF4A0C!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #CF4A0C!important;
 }
 
 .icon-dark-slate-blue {
